--- a/wikimapia4j/build.gradle
+++ b/wikimapia4j/build.gradle
@@ -4,6 +4,11 @@ apply plugin: 'java'
 
 
 
+
+compileJava {
+    sourceCompatibility = "${project.property('compileJava.sourceCompatibility')}"
+    targetCompatibility = "${project.property('compileJava.targetCompatibility')}"
+}
 dependencies {
     compile 'com.fasterxml.jackson.core:jackson-databind:2.7.0'
     testCompile "junit:junit:${project.property('junit.version')}"
