Load categories is working

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ android {
 dependencies {
     compile "com.android.support:support-v4:${project.property('android-support.version')}"
     compile project(":wikimapia4j")
+    compile 'com.jakewharton.timber:timber:4.5.1'
 }
