--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion Integer.valueOf(project.property('android.compileSdkVersion'))
-    buildToolsVersion project.property('android.buildToolsVersion')
 
     defaultConfig {
         applicationId "com.github.spyhunter99.wikimapia_client"
@@ -24,7 +23,7 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:support-v4:${project.property('android-support.version')}"
-    compile project(":wikimapia4j")
-    compile 'com.jakewharton.timber:timber:4.5.1'
+    implementation "com.android.support:support-v4:${project.property('android-support.version')}"
+    implementation project(":wikimapia4j")
+    implementation 'com.jakewharton.timber:timber:4.5.1'
 }
